--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,8 @@
     <dimen name="text_view_track_album">6dp</dimen>
     <dimen name="tracks_margin">16dp</dimen>
     <dimen name="item_track_h_size">100dp</dimen>
+    <dimen name="player_artwork_w_size">300dp</dimen>
+    <dimen name="player_artwork_h_size">300dp</dimen>
+    <dimen name="general_margin_left">16dp</dimen>
+    <dimen name="general_margin_right">16dp</dimen>
 </resources>
