--- a/app/src/main/res/layout/activity_artist_tracks.xml
+++ b/app/src/main/res/layout/activity_artist_tracks.xml
@@ -1,10 +1,7 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list_view_top_tracks"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tracks_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="udacity.hugo.myappportfolio.spotifystreamer.ArtistTracksActivity"
-    android:layout_margin="@dimen/tracks_margin">
+    android:orientation="vertical">
 
-</ListView>
+</FrameLayout>
