--- a/app/src/main/res/layout/item_track_layout.xml
+++ b/app/src/main/res/layout/item_track_layout.xml
@@ -8,36 +8,36 @@
         android:id="@+id/image_view_track"
         android:layout_width="@dimen/artist_image_w_size"
         android:layout_height="@dimen/artist_image_h_size"
-        android:src="@android:drawable/gallery_thumb"
         android:layout_gravity="center"
+        android:layout_margin="@dimen/image_view_author_margin"
         android:contentDescription="@string/desc_author_image"
-        android:layout_margin="@dimen/image_view_author_margin"/>
+        android:src="@android:drawable/gallery_thumb" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:layout_gravity="center">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_view_album_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center|start"
-            android:textSize="@dimen/text_view_author_name_text_size"
             android:layout_marginLeft="@dimen/text_view_track_album"
-            android:layout_marginStart="@dimen/text_view_track_album"/>
+            android:layout_marginStart="@dimen/text_view_track_album"
+            android:gravity="center|start"
+            android:textSize="@dimen/text_view_author_name_text_size" />
 
         <TextView
             android:id="@+id/text_view_track_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center|start"
-            android:textSize="@dimen/text_view_author_name_text_size"
             android:layout_marginLeft="@dimen/text_view_track_album"
             android:layout_marginStart="@dimen/text_view_track_album"
-            android:layout_marginTop="@dimen/text_view_track_album"/>
+            android:layout_marginTop="@dimen/text_view_track_album"
+            android:gravity="center|start"
+            android:textSize="@dimen/text_view_author_name_text_size" />
 
     </LinearLayout>
 
